# EDGAR-edge

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
infra/: alb.tf  artifacts.tf  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  lambda.tf  monitoring.tf  outputs.tf  providers.tf  s3.tf  sqs.tf  vars.tf
scripts/: backfill_interactive.py  create_issue_from_markdown.py  launch_training_instance.sh  run_finetune.sh  setup-gpu-instance.sh  terraform_destroy_ephemeral_targets.txt
src/ingest/: async_backfill.py  backfill.py  handler.py  rss_poc.py
src/research/: .gitignore  README.md  count_tokens.py  delete_whales.py  edgar_labels.csv  edgar_labels.parquet  environment.yml  extract_plaintext.py  finetune_roberta_script.py  fulldataset_ordered_top10000.txt  generate_labels.py  generate_smaller_datastet.py  inspect_parquet.py
src/score/: Dockerfile  app.py  dummy_model.py  gunicorn_conf.py  pyproject.toml
tests/: locust_score.py  test_ingest.py  test_score_api.py
tests/test_data/: feed_snapshot.xml
