[tool.poetry]
name = "edgar-edge-scoring-service"
version = "0.1.0"
description = "FastAPI service for EDGAR-Edge sentiment scoring"
authors = ["Your Name <you@example.com>"] # Replace with actual author
readme = "README.md" # Optional: create a README for this service

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0" # Or latest stable version
uvicorn = {extras = ["standard"], version = "^0.27.0"} # For Gunicorn worker and local dev
gunicorn = "^21.2.0"
pydantic = "^2.5.0"
boto3 = "^1.34.0" # For S3 access
prometheus-fastapi-instrumentator = "^6.1.0" # For Prometheus metrics
transformers = "^4.38.0" # For loading HuggingFace models
torch = "^2.1.0" # PyTorch, often a dependency of transformers for model execution
peft = "^0.9.0" # For loading LoRA/PEFT adapted models

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0" # For testing FastAPI apps

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
